--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -25,6 +25,9 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="{{ path('app_cadre_photo') }}" class="nav-link px-2 text-white">{{ 'photos'|trans }}</a>
+            </li>
+            <li class="nav-item">
                 <a href="{{ path('app_about_page') }}" class="nav-link px-2 text-white">
                     {{ 'footer.about'|trans }}
                 </a>
