Mise à jour du commision platforlRate à 5%

--- a/templates/delivery/show.html.twig
+++ b/templates/delivery/show.html.twig
@@ -155,10 +155,10 @@
 				{{ 'common.back'|trans }}
 			</a>
 
-			<a href="{{ path('app_delivery_edit', {'id': delivery.id}) }}" class="btn btn-dark">
+			{# <a href="{{ path('app_delivery_edit', {'id': delivery.id}) }}" class="btn btn-dark">
 				✏️
 				{{ 'delivery.edit_address'|trans }}
-			</a>
+			</a> #}
 		</div>
 	</div>
 {% endblock %}
